--- a/Pharmacy_Compliance_Backend.html
+++ b/Pharmacy_Compliance_Backend.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pharmacy Compounding Compliance Log</title>
+<title>Pharmacy Compounding Compliance Log - Professional USP Monitoring</title>
 
 <!-- Favicon to prevent 404 error -->
 <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧪</text></svg>">
@@ -305,9 +305,12 @@ th {
   
   <!-- App Description for Google Compliance -->
   <div style="background:#f8f9fa;padding:20px;border-radius:8px;margin:20px 0;border-left:4px solid #3498db;">
-    <h4 style="margin:0 0 10px 0;color:#2c3e50;font-size:16px;">📋 Application Purpose</h4>
+    <h4 style="margin:0 0 10px 0;color:#2c3e50;font-size:16px;">📋 Pharmacy Compounding Compliance Log</h4>
     <p style="margin:0 0 10px 0;font-size:13px;line-height:1.4;color:#495057;">
-      This application helps pharmacy professionals monitor and document compliance with USP (United States Pharmacopeia) standards for compounding areas 795, 797, and 800. It tracks temperature, humidity, air pressure, and cleaning tasks to ensure regulatory compliance.
+      Professional USP compliance monitoring system for pharmacy compounding operations. This application helps pharmacy professionals monitor and document compliance with USP (United States Pharmacopeia) standards for compounding areas 795, 797, and 800.
+    </p>
+    <p style="margin:0 0 10px 0;font-size:13px;line-height:1.4;color:#495057;">
+      <strong>Features:</strong> Real-time environmental monitoring (temperature, humidity, air pressure), automated PDF report generation, secure Google Drive integration, cleaning task tracking, and compliance validation against USP standards.
     </p>
     <p style="margin:0;font-size:13px;line-height:1.4;color:#495057;">
       <strong>Data Usage:</strong> The application generates PDF compliance reports and uploads them to your Google Drive for secure storage and regulatory documentation. No personal health information is collected or stored.
