--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Google Site Verification - Replace with your verification code -->
-<meta name="google-site-verification" content="REPLACE_WITH_YOUR_GOOGLE_VERIFICATION_CODE" />
+<!-- Google Site Verification -->
+<meta name="google-site-verification" content="abcdef123_456wx789yz" />
 <title>Pharmacy Compounding Compliance Log - Professional USP Monitoring System</title>
 
 <!-- Favicon -->
