Complete Google Verification Setup - Add Privacy Policy, Terms, Contact Pages

--- a/Pharmacy_Compliance_Backend.html
+++ b/Pharmacy_Compliance_Backend.html
@@ -567,7 +567,7 @@ const isProduction = isGitHubPages;
 // Configuration
 const CONFIG = {
   // Dynamic backend URL based on environment
-  BACKEND_URL: isDevelopment ? 'http://localhost:8001' : 'https://api.labreporttool.xyz',
+  BACKEND_URL: isDevelopment ? 'http://localhost:8001' : 'https://pharmacy-compliance-backend.onrender.com',
   
   // Service Account Configuration (no frontend Google API needed)
   USE_SERVICE_ACCOUNT: true,
