Update backend URL and create separate service deployment guide
- Changed primary backend URL to pharmacy-backend-api.onrender.com
- Updated fallback URLs for better reliability
- Created deployment guide for separate backend service
- Enhanced test script to check multiple backend URLs
- Frontend and backend now properly separated as different services

--- a/Pharmacy_Compliance_Backend.html
+++ b/Pharmacy_Compliance_Backend.html
@@ -567,11 +567,11 @@ const isProduction = isGitHubPages;
 // Configuration
 const CONFIG = {
   // Dynamic backend URL based on environment
-  BACKEND_URL: isDevelopment ? 'http://localhost:8001' : 'https://pharmacy-compliance-backend.onrender.com',
+  BACKEND_URL: isDevelopment ? 'http://localhost:8001' : 'https://pharmacy-backend-api.onrender.com',
   
   // Fallback URLs if primary backend fails
   FALLBACK_URLS: [
-    'https://pharmacy-compliance-backend-simple.onrender.com',
+    'https://pharmacy-compliance-backend.onrender.com',
     'https://labreport-backend.onrender.com'
   ],
   
