--- a/Pharmacy_Compliance_Backend.html
+++ b/Pharmacy_Compliance_Backend.html
@@ -384,7 +384,7 @@ th {
     <strong>☁️ Render Cloud Integration:</strong> Reports automatically upload to <strong>labreporting1177@gmail.com</strong> Google Drive via secure cloud backend
     <div style="margin-top:4px;opacity:0.8;">
       <strong>🌍 Environment:</strong> <span id="environmentInfo">Detecting...</span> | 
-      <strong>🚀 Backend:</strong> <span id="backendInfo">pharmacy-compliance-backend.onrender.com</span>
+      <strong>🚀 Backend:</strong> <span id="backendInfo">labreport-q96c.onrender.com</span>
     </div>
   </div>
 </div>
@@ -567,12 +567,12 @@ const isProduction = isGitHubPages;
 // Configuration
 const CONFIG = {
   // Dynamic backend URL based on environment
-  BACKEND_URL: isDevelopment ? 'http://localhost:8001' : 'https://pharmacy-backend-api.onrender.com',
+  BACKEND_URL: isDevelopment ? 'http://localhost:8001' : 'https://labreport-q96c.onrender.com',
   
   // Fallback URLs if primary backend fails
   FALLBACK_URLS: [
     'https://pharmacy-compliance-backend.onrender.com',
-    'https://labreport-backend.onrender.com'
+    'https://pharmacy-backend-api.onrender.com'
   ],
   
   // Service Account Configuration (no frontend Google API needed)
